@@ -1,6 +1,9 @@
+added support for drag and drop.
+
 fixed expunging on backend filteres.
 
 changed the Cached search so that you can now make a custom display filter
+for cached and uncached messages.
 
 changed the theme selection menu so that we should see all of (and only) the
 available look and feels.
